fix(base10): remove dark mode setting based on browser preferences

--- a/profiles/base10/resources/css/base-theme.css
+++ b/profiles/base10/resources/css/base-theme.css
@@ -17,19 +17,6 @@
     --jinks-background-color: var(--jinks-background-color-light);
 }
 
-/* Settings for dark mode based on preferred color scheme */
-@media only screen and (prefers-color-scheme: dark) {
-    body:not([data-theme]) {
-        --pb-color: var(--jinks-color-inverse, var(--pico-color));
-        --primary-text-color: var(--pb-color);
-        --pb-highlight-color: var(--pb-highlight-color-dark);
-        --pb-logo: var(--pb-logo-dark);
-        --jinks-splash-background: var(--jinks-splash-background-dark);
-        --jinks-header-background-color: var(--jinks-header-background-color-dark);
-        --jinks-background-color: var(--jinks-background-color-dark);
-    }
-}
-
 /* Settings for dark mode if manually chosen by user */
 [data-theme="dark"] {
     --pb-color: var(--jinks-color-inverse, var(--pico-color));
