--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -14,11 +14,6 @@
     }
 }
 
-@media only screen and (prefers-color-scheme: dark) {
-    body:not([data-theme]) {
-    }
-}
-
 [data-theme="dark"] {
 }
 
